--- a/css/arki-style-custom.css
+++ b/css/arki-style-custom.css
@@ -15516,6 +15516,7 @@ body.page-id-13724.single-product .arki-header-background-transparent {
 
 }
 
+/* */
 .static-text {
     font-size: 40px;
     font-weight: bold;
