Force add CSS file

--- a/css/style-core.css
+++ b/css/style-core.css
@@ -8168,3 +8168,52 @@ textarea.input {
 	flex-direction: column;
 	gap: 16px;
 }
+
+.prism-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	bottom: 10%;
+	left: 5%;
+	color: black;
+
+}
+
+/* */
+.static-text {
+	font-size: 40px;
+	font-weight: bold;
+	margin-right: 8px;
+	/* Space between static and rotating text */
+}
+
+.rotating-text {
+	position: relative;
+	overflow: hidden;
+	width: 300px;
+	/* Adjust to fit the rotating text */
+	height: 68px;
+	/* Match the text size */
+	margin-left: 6px;
+}
+
+.text {
+	font-size: 40px;
+	font-weight: bold;
+	position: absolute;
+	width: 100%;
+	opacity: 0;
+	transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+#architecture {
+	transform: translateY(0);
+	/* Starting position */
+	opacity: 1;
+}
+
+#visualisation {
+	transform: translateY(100%);
+	/* Start below the container */
+}
