--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ section {
 .navbar-links a {
     color: #000000;
     text-decoration: none;
-    font-size: 32px;
+    font-size: 30px;
     padding: 10px 0;
     transition: color 0.3s ease-in-out;
     position: relative;
@@ -118,7 +118,7 @@ section {
 /* Language Buttons */
 .language-buttons {
     opacity: 0.4;
-    font-size: 22px;
+    font-size: 20px;
     cursor: pointer;
     transition: opacity 0.3s ease-in-out;
 }
@@ -180,7 +180,7 @@ section {
 .works-section {
     margin-left: auto;
     margin-right: auto;
-    padding: 240px 15%;
+    padding: 200px 15% 0 15%;
 }
 
 .service {
@@ -280,7 +280,7 @@ section {
 }
 
 .view-portfolio-p {
-    font-size: 36px;
+    font-size: 30px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -295,4 +295,82 @@ section {
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.3);
     right: -15%;
+}
+
+
+/* ABOUT PAGE CSS */
+
+.about-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 7fr 10fr;
+    justify-content: center;
+    align-items: center;
+    gap: 00px;
+}
+
+.about-section {
+    height: 100vh;
+}
+
+.about-bg-lines {
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+}
+
+.about-bg-line {
+    width: 1px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.about-left-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    white-space: nowrap;
+    font-size: 32px;
+    padding: 30px;
+    text-align: left;
+    gap: 30px;
+    margin-bottom: auto;
+}
+
+.about-h3-div {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding: 30px;
+
+}
+
+.about-h3-div::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 4px;
+    background-color: #000;
+    width: 54%;
+    left: 0;
+}
+
+.about-h3 {
+    line-height: 45px;
+}
+
+.about-p {
+    font-size: 20px;
+    width: 600px;
+    margin-top: 150px;
+}
+
+.circle.about {
+    position: static;
 }
