--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,8 @@ section {
 
 .footer-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 180px;
     align-items: flex-start;
     padding: 20px 10%;
 }
@@ -585,4 +586,82 @@ section {
 
 .contact-form button:hover {
     background-color: #333;
+}
+
+
+
+/* Works Css */
+
+.works-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin: 20px;
+}
+
+.work {
+    background-color: #f9f9f9;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: auto;
+}
+
+.work img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.work-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: absolute;
+    inset: auto 0 0 0;
+    z-index: 1;
+    padding: 10px;
+    text-align: center;
+    transform: translateY(100%);
+    transition: all 0.3s ease-in-out;
+    color: white;
+
+}
+
+.work:hover .work-name {
+    transform: translateY(0);
+}
+
+
+.work-h3 {
+    font-size: 1.2rem;
+    margin: 5px 0;
+}
+
+.work-p {
+    font-size: 1rem;
+}
+
+/* Make the 4th element span 2 rows */
+.works-container .work:nth-child(4) {
+    grid-row: span 2;
+}
+
+
+@media (max-width: 965px) {
+    .work-name {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        position: relative;
+        inset: 0 0 0 0;
+        z-index: 1;
+        padding: 10px;
+        text-align: start;
+        transform: translateY(0);
+        transition: all 0.3s ease-in-out;
+        color: black;
+
+    }
 }
