--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,15 @@ section {
     .service {
         margin-bottom: 50px;
     }
+
+    .services-section {
+        padding: 0 10%;
+    }
+
+    .service-image {
+        width: 80vw;
+        height: 80vw;
+    }
 }
 
 
