--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,7 @@ section {
 .contact-info p a {
     text-decoration: none;
     text-align: center;
+    font-size: 20px;
 }
 
 .contact-info p a {
@@ -681,7 +682,12 @@ section {
     }
 
     .contact-info h3 {
-        margin: 0 auto 0 10px;
+        margin: 0 auto 0 12px;
+        font-size: 20px;
+    }
+
+    .contact-info p a {
+        font-size: 16px;
     }
 }
 
