--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,19 @@ section {
     /* Required for ::after positioning */
 }
 
+.navbar-lang-links {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+    position: relative;
+    /* Required for ::after positioning */
+}
+
 .navbar-links li {
+    margin-left: 1.5rem;
+}
+
+.navbar-lang-links li {
     margin-left: 1.5rem;
 }
 
@@ -67,8 +79,30 @@ section {
     position: relative;
 }
 
+.navbar-lang-links a {
+    color: #00000050;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 10px 0;
+    transition: color 0.3s ease-in-out;
+    position: relative;
+}
+
+.navbar-lang-links a.active {
+    color: #000000;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 10px 0;
+    transition: color 0.3s ease-in-out;
+    position: relative;
+}
+
 /* Hover effect */
 .navbar-links a:hover {
+    color: inherit;
+}
+
+.navbar-lang-links a:hover {
     color: inherit;
 }
 
@@ -91,6 +125,18 @@ section {
         left: var(--hover-left, 0);
         width: var(--hover-width, 0);
     }
+
+    .navbar-lang-links::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: var(--hover-left, 0);
+        height: 2px;
+        background-color: #000;
+        width: var(--hover-width, 0);
+        transition: left 0.3s ease-in-out, width 0.3s ease-in-out;
+    }
+
 }
 
 
@@ -169,6 +215,28 @@ section {
     }
 
     .navbar-links li {
+        margin: 0;
+    }
+
+
+
+    .navbar-lang-links a:hover,
+    .navbar-lang-links a.active {
+        color: #fff;
+        /* Example color for hover/active state */
+    }
+
+    .navbar-lang-links {
+        flex-direction: column;
+        gap: 1rem;
+        margin-left: auto;
+    }
+
+    .navbar-lang-links a {
+        color: #ffffff50;
+    }
+
+    .navbar-lang-links li {
         margin: 0;
     }
 
