--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ section {
 
 .about-section {
     padding-bottom: 100px;
-    height: calc(100vh - 180px);
+    /*height: calc(100vh - 180px);*/
 }
 
 
